Доделал авторизацию, чуть-чуть уменьшил дизайн (нужно будет ещё уменьшить)

--- a/NoSTORE/appsettings.json
+++ b/NoSTORE/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MongoDb": "mongodb://localhost:27017"
+  },
+  "JwtOptions": {
+    "SecretKey": "NoSTORE_sk_221348392-NSTR-NSTR-NSTR-",
+    "Expires": "00:02:00",
+    "Issuer": "NoSTORE_API",
+    "Audience":  "NoSTORE_WebClient"
+  },
+  "SmtpSettings": {
+    "EmailAddress": "nostore@inbox.ru",
+    "EmailPassword": "2wuFt4acLyCmF4Usutgu"
   }
 }
