--- a/NoSTORE/NoSTORE.csproj
+++ b/NoSTORE/NoSTORE.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\photos\avatars\Новая папка\**" />
+    <Content Remove="wwwroot\photos\avatars\Новая папка\**" />
+    <EmbeddedResource Remove="wwwroot\photos\avatars\Новая папка\**" />
+    <None Remove="wwwroot\photos\avatars\Новая папка\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
