--- a/NoSTORE/appsettings.json
+++ b/NoSTORE/appsettings.json
@@ -10,10 +10,10 @@
     "MongoDb": "mongodb://localhost:27017"
   },
   "JwtOptions": {
-    "SecretKey": "NoSTORE_sk_221348392-NSTR-NSTR-NSTR-",
-    "Expires": "00:02:00",
-    "Issuer": "NoSTORE_API",
-    "Audience":  "NoSTORE_WebClient"
+    "SecretKey": "nostore-sk-nstr-nstr-jfjD196JSQOPYzx8296k1111",
+    "Issuer": "NoSTORE",
+    "Audience": "NoSTOREUsers",
+    "TokenLifetimeMinutes": 43200
   },
   "SmtpSettings": {
     "EmailAddress": "nostore@inbox.ru",
