--- a/NoSTORE/Properties/launchSettings.json
+++ b/NoSTORE/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7168;http://localhost:5202",
+      "applicationUrl": "http://localhost:7168;http://localhost:5202",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
